#8: the second argument for --add-opens is a package, not a module - improved naming